--- a/Hotels_Парсинг и обработка.ipynb
+++ b/Hotels_Парсинг и обработка.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "04c351f5",
+   "id": "2df485c7",
    "metadata": {},
    "source": [
     "## Парсинг"
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73a1b832",
+   "id": "c24df6d8",
    "metadata": {},
    "source": [
     "Для начала спарсим все сайты отелей, которые мы собираемся использовать для анализа. Все сайты сохранены в переменной `hotels`."
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "88956cea",
+   "id": "046b2483",
    "metadata": {},
    "source": [
     "Всего получилось спарсить 7543 отеля."
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b70aaea5",
+   "id": "e4ebb227",
    "metadata": {},
    "source": [
     "Теперь проитерируемся по всем сайтам, чтобы получить необходимую информацию по каждому отелю."
@@ -494,7 +494,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "665f1824",
+   "id": "1ce1b917",
    "metadata": {},
    "outputs": [
     {
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "83e137f7",
+   "id": "e2efb6d3",
    "metadata": {},
    "source": [
     "#### Перевод из строки в список и добавление дамми-переменных"
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f90ffce",
+   "id": "03107f98",
    "metadata": {},
    "source": [
     "Так как в csv-файле списки со всеми удобствами сохранились как строки, то напишем функцию, которая переведет эти строки обратно в списки."
@@ -545,7 +545,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8cfbd6de",
+   "id": "2c821875",
    "metadata": {},
    "source": [
     "1) `perks`"
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27b4372d",
+   "id": "707cf93c",
    "metadata": {},
    "source": [
     "Теперь нужно перевести все категориальные переменные в дамми-переменные. Начнем с `perks`."
@@ -625,7 +625,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "4b6073fc",
+   "id": "1d913b4e",
    "metadata": {},
    "outputs": [
     {
@@ -819,7 +819,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10410e9f",
+   "id": "9168a417",
    "metadata": {},
    "source": [
     "2) `amenities`\n",
@@ -864,7 +864,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "6013024d",
+   "id": "ef53377e",
    "metadata": {},
    "outputs": [
     {
@@ -884,7 +884,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "509db90d",
+   "id": "5484a77f",
    "metadata": {},
    "source": [
     "Так как уникальных `amenities` очень много (354 характ-ки), то создадим дамми-переменные только для наиболее часто повторяющихся значений."
@@ -893,7 +893,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "f33c137e",
+   "id": "3f30b3c5",
    "metadata": {},
    "outputs": [
     {
@@ -1061,7 +1061,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "51e700b9",
+   "id": "a741f0a6",
    "metadata": {},
    "outputs": [
     {
@@ -1187,7 +1187,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c51df924",
+   "id": "86601b12",
    "metadata": {},
    "source": [
     "#### Добавление местоположения отеля"
@@ -1195,7 +1195,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "321b999d",
+   "id": "15280818",
    "metadata": {},
    "source": [
     "Отметим, что на стоимость проживания также может влиять расположение отеля в отдельном районе г. Сочи или в населенном пункте городской агломерации. Поэтому в качестве признака добавим метоположение отеля."
@@ -1229,7 +1229,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b0fbbb9e",
+   "id": "fc7b5d2e",
    "metadata": {},
    "source": [
     "#### Обработка расстояний"
@@ -1237,7 +1237,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14b727a2",
+   "id": "4a1275c4",
    "metadata": {},
    "source": [
     "Следующий шаг - перевод расстояний из километров в метры и из строк в числа."
@@ -1439,7 +1439,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "923bda83",
+   "id": "46b128e1",
    "metadata": {},
    "source": [
     "#### Добавление количества удобств"
@@ -1447,7 +1447,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "501434d0",
+   "id": "a0e9225d",
    "metadata": {},
    "source": [
     "Добавим новые признаки `perks_n` и `amenities_n` - они показывают количество основных удобств и дополнительных удобств, соответственно."
@@ -1456,7 +1456,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "182fb442",
+   "id": "92b33095",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1467,7 +1467,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "61186896",
+   "id": "549e8f85",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1478,7 +1478,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "1eb6dcda",
+   "id": "fdd9a3dc",
    "metadata": {},
    "outputs": [
     {
@@ -1681,7 +1681,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "1f6cd219",
+   "id": "4b34ae92",
    "metadata": {},
    "outputs": [
     {
@@ -1702,7 +1702,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "4bf87ec1",
+   "id": "fd991b97",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1711,9 +1711,144 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a32278b5",
+   "metadata": {},
+   "source": [
+    "### Дополнительно\n",
+    "\n",
+    "Перебор коэффициентов при логарифме суммы (VIF):"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9d258461",
+   "id": "afb9bf99",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vif_w_summ = [] \n",
+    "r2_w_summ = [] \n",
+    "weights = [] \n",
+    "res_w = pd.DataFrame(columns=['weights', 'vif', 'r2']) \n",
+    "#X_log_am_sum_dist['sum_dist_w'] = \n",
+    "for i in np.arange(0.1, 1, 0.1): \n",
+    "    w = {'sea': round(i, 1), 'city': round((1-i), 1)} \n",
+    "    X_weighted = X_log_am \n",
+    "    X_weighted['sum_dist_w'] = np.log(X_1['dist_city'] * w['city'] + X_1['dist_sea'] * w['sea']) \n",
+    "    X_weighted = X_weighted.drop(['dist_sea', 'dist_city', 'Пляж рядом'], axis=1) \n",
+    "    vif_w = variance_inflation_factor(X_weighted.values, 25) \n",
+    "    X_weighted_с = sm.add_constant(X_weighted, prepend=False) \n",
+    "    r2_w = sm.OLS(y_log, X_weighted_с).fit().rsquared \n",
+    "    vif_w_summ.append(vif_w) \n",
+    "    r2_w_summ.append(r2_w) \n",
+    "    weights.append(w) \n",
+    " \n",
+    "res_w['weights'] = weights \n",
+    "res_w['vif'] = vif_w_summ \n",
+    "res_w['r2'] = r2_w_summ \n",
+    " \n",
+    "res_w"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a8a0abf5",
+   "metadata": {},
+   "source": [
+    "Создание новой переменной `amen_only` (мультиколлинеарность):"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f184663f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_sochi = df_all_w.loc[df_all_w.location == 'sochi'].reset_index() \n",
+    "all_new_amen = [] \n",
+    "for i in range(df_sochi.shape[0]): \n",
+    "    amen_ = df_sochi.amenities.loc[i][1:-1].replace(\"'\", '').split(', ') \n",
+    "    perks_ = df_sochi.perks.loc[i][1:-1].replace(\"'\", '').split(', ') \n",
+    "    new_amen = len(amen_) \n",
+    "    string = df_sochi.amenities.loc[i].lower().replace('кафе', 'бар') \n",
+    "    for k in perks_: \n",
+    "        k = k.lower() \n",
+    "        if 'интернет' in k: \n",
+    "            if 'интернет' in string: \n",
+    "                new_amen -= 1 \n",
+    "            k = 'wi-fi' \n",
+    "        if 'детей' in k: \n",
+    "            k = 'дет' \n",
+    "        if 'бар' in k: \n",
+    "            k = 'бар' \n",
+    "        if 'животными' in k: \n",
+    "            k = 'живот' \n",
+    "        if 'курить' in k: \n",
+    "            k = 'кур' \n",
+    "        if 'спа' in k: \n",
+    "            k = 'спа' \n",
+    "        if 'огранич' in k: \n",
+    "            k = 'огранич' \n",
+    "        if 'пляж рядом' in k: \n",
+    "            new_amen -= 1 \n",
+    "        if k in string: \n",
+    "            new_amen -= string.count(k) \n",
+    "        if ('ресторан' in string) and (k == 'бар'): \n",
+    "            new_amen -= string.count('ресторан') \n",
+    "        if ('тренаж' in string) and ('фит' in k): \n",
+    "            new_amen -= 1 \n",
+    "        if k == 'спа': \n",
+    "            if 'красот' in string: \n",
+    "                new_amen -= string.count('красот') \n",
+    "            if 'сауна' in string: \n",
+    "                new_amen -= string.count('сауна') \n",
+    "            if 'массаж' in string: \n",
+    "                new_amen -= string.count('массаж') \n",
+    "            if 'баня' in string: \n",
+    "                new_amen -= string.count('баня') \n",
+    "        if 'отсутствие лифтов' in string: \n",
+    "            new_amen -= 1 \n",
+    "    all_new_amen.append(new_amen) \n",
+    " \n",
+    "X_log_am = X_log.copy() \n",
+    "X_log_am['amen_only'] = all_new_amen \n",
+    "X_log_am = X_log_am.drop(['amenities_n', 'perks_n'], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a447ab67",
+   "metadata": {},
+   "source": [
+    "Преобразование двух переменных в одну:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9335a54f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_for_model.loc[(df_for_model['kids'] >= 1.0) | (df_for_model['Подходит для детей'] == 1.0), 'Подходит для детей'] = 1 \n",
+    "df_for_model.loc[(df_for_model['kids'] == 0.0) & (df_for_model['Подходит для детей'] == 0.0), 'Подходит для детей'] = 0 \n",
+    "df_for_model.loc[(df_for_model['pool'] == 1.0) | (df_for_model['Бассейн'] == 1.0), 'Бассейн'] = 1 \n",
+    "df_for_model.loc[(df_for_model['pool'] == 0.0) & (df_for_model['Бассейн'] == 0.0), 'Бассейн'] = 0 \n",
+    "df_for_model.loc[(df_for_model['anim'] == 1.0) | (df_for_model['Разрешено с домашними животными'] == 1.0), 'Разрешено с домашними животными'] = 1 \n",
+    "df_for_model.loc[(df_for_model['anim'] == 0.0) & (df_for_model['Разрешено с домашними животными'] == 0.0), 'Разрешено с домашними животными'] = 0 \n",
+    "df_for_model.loc[(df_for_model['invalid_bin'] == 1.0) | (df_for_model['Для гостей с ограниченными возможностями'] == 1.0), 'Для гостей с ограниченными возможностями'] = 1 \n",
+    "df_for_model.loc[(df_for_model['invalid_bin'] == 0.0) & (df_for_model['Для гостей с ограниченными возможностями'] == 0.0), 'Для гостей с ограниченными возможностями'] = 0 \n",
+    "df_for_model.loc[(df_for_model['smokefree_bin'] == 0.0) | (df_for_model['Можно курить'] == 1.0), 'Можно курить'] = 1 \n",
+    "df_for_model.loc[(df_for_model['smokefree_bin'] == 1.0) & (df_for_model['Можно курить'] == 0.0), 'Можно курить'] = 0\n",
+    "df_for_model = df_for_model.drop(['kids', 'dist_sea_km', 'dist_city_km', 'pool', 'anim', 'invalid_bin', 'smokefree_bin'], axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5bd7d5c7",
    "metadata": {},
    "outputs": [],
    "source": []
